[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fast_indicators"
version = "0.1.0"
description = "Fast technical indicators using Rust"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["trading", "indicators", "rust", "technical-analysis"]
authors = [
    {name = "Trading Bot", email = "dev@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/example/fast_indicators"
Repository = "https://github.com/example/fast_indicators.git"

[tool.maturin]
features = ["pyo3/extension-module"]